// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FiltersReducer should handle FILTER_CHANGED action 1`] = `
Object {
  "activeFilters": Object {
    "isHotelFacilitiesActive": true,
    "isMinScoreActive": true,
    "isPriceFilterActive": true,
    "isStarsFilterActive": true,
  },
  "filterParams": Object {
    "freeCancellation": true,
    "hotelFacilities": Array [
      "pool",
    ],
    "maxPrice": 29,
    "minPrice": 14,
    "minScore": 3,
    "starsRating": Array [
      2,
    ],
  },
}
`;

exports[`FiltersReducer should handle FILTER_CHANGED action 2`] = `
Object {
  "activeFilters": Object {
    "isHotelFacilitiesActive": false,
    "isMinScoreActive": false,
    "isPriceFilterActive": true,
    "isStarsFilterActive": false,
  },
  "filterParams": Object {
    "freeCancellation": false,
    "hotelFacilities": Array [],
    "maxPrice": 29,
    "minPrice": null,
    "minScore": null,
    "starsRating": Array [],
  },
}
`;

exports[`FiltersReducer should handle FILTER_CHANGED action 3`] = `
Object {
  "activeFilters": Object {
    "isHotelFacilitiesActive": false,
    "isMinScoreActive": false,
    "isPriceFilterActive": true,
    "isStarsFilterActive": false,
  },
  "filterParams": Object {
    "freeCancellation": false,
    "hotelFacilities": Array [],
    "maxPrice": null,
    "minPrice": 50,
    "minScore": null,
    "starsRating": Array [],
  },
}
`;

exports[`FiltersReducer should return the initialState 1`] = `
Object {
  "activeFilters": Object {
    "isHotelFacilitiesActive": false,
    "isMinScoreActive": false,
    "isPriceFilterActive": false,
    "isStarsFilterActive": false,
  },
  "filterParams": Object {
    "freeCancellation": false,
    "hotelFacilities": Array [],
    "maxPrice": null,
    "minPrice": null,
    "minScore": null,
    "starsRating": Array [],
  },
}
`;
